unpackaged/main/default/objects/Opportunity/fields/ConsultantSourced__c.field-meta.xml
<CustomField>
    <fullName>ConsultantSourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SAL-701 Consultant Sourced</description>
    <label>Consultant Sourced</label>
    <type>Checkbox</type>
</CustomField>