unpackaged/main/default/objects/Opportunity/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>#SAL-701 Opportunity contract end date</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>