unpackaged/main/default/objects/Opportunity/fields/FirstYearRevenue__c.field-meta.xml
<CustomField>
    <fullName>FirstYearRevenue__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>First Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>