unpackaged/main/default/objects/Opportunity/fields/FiscalYearRevenue__c.field-meta.xml
<CustomField>
    <fullName>FiscalYearRevenue__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Fiscal Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>