unpackaged/main/default/objects/Opportunity/fields/LegacyOwner__c.field-meta.xml
<CustomField>
    <fullName>LegacyOwner__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Legacy Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>