unpackaged/main/default/objects/Opportunity/fields/OpportunityProdDrug__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProdDrug__c</fullName>
    <description>#SAL-1197 Rollup of Opportunity Products</description>
    <label>Opportunity Prod Drug</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>