unpackaged/main/default/objects/Opportunity/fields/OpportunityProductCount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductCount__c</fullName>
    <description>This Custom Roll-Up Summary field is part of SAL-1354 User Story.</description>
    <label>Opportunity Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>