unpackaged/main/default/objects/Opportunity/fields/PrimaryQuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuoteStatus__c</fullName>
    <formula>TEXT ( SBQQ__PrimaryQuote__r.SBQQ__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote Status</label>
    <type>Text</type>
</CustomField>