unpackaged/main/default/objects/Opportunity/fields/ProposalAnalyst__c.field-meta.xml
<CustomField>
    <fullName>ProposalAnalyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Proposal Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>