unpackaged/main/default/objects/Opportunity/fields/ProposalDueDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDueDate__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>