unpackaged/main/default/objects/Opportunity/fields/ProposalStatus__c.field-meta.xml
<CustomField>
    <fullName>ProposalStatus__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <inlineHelpText>Only used when proposal team support is needed to track the status of a given response.</inlineHelpText>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProposalTeamSupport__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>Proposal In Progress</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>