unpackaged/main/default/objects/Opportunity/fields/ProposalSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalSubmittedDate__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Proposal Submitted Date</label>
    <type>Date</type>
</CustomField>