unpackaged/main/default/objects/Opportunity/fields/ProposalTeamSupport__c.field-meta.xml
<CustomField>
    <fullName>ProposalTeamSupport__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <inlineHelpText>Used to request support for RFPs, RFIs, and Proactive Proposals.</inlineHelpText>
    <label>Proposal Team Support</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Support Needed</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Proactive Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>