unpackaged/main/default/objects/Opportunity/fields/QuestionsDueDate__c.field-meta.xml
<CustomField>
    <fullName>QuestionsDueDate__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Questions Due Date</label>
    <type>Date</type>
</CustomField>