unpackaged/main/default/objects/Opportunity/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>