unpackaged/main/default/objects/Opportunity/fields/RequestReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestReceivedDate__c</fullName>
    <description>#SAL-701 - Field created for opportunity management</description>
    <label>Request Received Date</label>
    <type>Date</type>
</CustomField>