unpackaged/main/default/objects/Opportunity/fields/StatusSummary__c.field-meta.xml
<CustomField>
    <fullName>StatusSummary__c</fullName>
    <description>#SAL-701 - Field created for opportunity management Status Summary</description>
    <inlineHelpText>Summary of the opportunity&#39;s status and/or next steps</inlineHelpText>
    <label>Status Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>