unpackaged/main/default/objects/Opportunity/fields/VendorAccountName__c.field-meta.xml
<CustomField>
    <fullName>VendorAccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SAL-701 Vendor Account Name</description>
    <inlineHelpText>When the &quot;Consultant-Sourced&quot; checkbox is selected, you must add the Vendor Account information.</inlineHelpText>
    <label>Vendor Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Opportunities</relationshipLabel>
    <relationshipName>VendorOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>