unpackaged/main/default/objects/Opportunity/recordTypes/BioPharma.recordType-meta.xml
<RecordType>
    <fullName>BioPharma</fullName>
    <active>true</active>
    <businessProcess>CMM Sales Process</businessProcess>
    <description>BioPharma record type that controls visibility for Bio Pharma users</description>
    <label>BioPharma</label>
</RecordType>