unpackaged/main/default/objects/Opportunity/validationRules/CMM_VR01_PrimaryQuoteRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR01_PrimaryQuoteRequired</fullName>
    <active>true</active>
    <description>#SAL-1205 - This validation rule checks the opportunity to validate if there is a primary quote on the opportunity. A primary quote draft with configured services is needed to move from Qualify to Discovery stage.</description>
    <errorConditionFormula>AND(
    NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
    AND(
        ISCHANGED(StageName),
        ISPICKVAL(StageName, &#39;Discovery&#39;),
        ISBLANK(SBQQ__PrimaryQuote__c)
    )
)</errorConditionFormula>
    <errorMessage>A Primary Quote draft with configured services is needed to move from &#39;Qualify&#39; to &#39;Discovery&#39;</errorMessage>
</ValidationRule>