unpackaged/main/default/objects/Opportunity/validationRules/CMM_VR05_CloseDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR05_CloseDateRequired</fullName>
    <active>true</active>
    <description>#SAL-1197 Closed Date is required before moving to the Discovery stage.</description>
    <errorConditionFormula>AND(
    NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
    AND(
        ISCHANGED(StageName),
        ISPICKVAL(StageName, &#39;Discovery&#39;),
        ISBLANK(CloseDate)
    )
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Closed Date is required before moving to the Discovery stage.</errorMessage>
</ValidationRule>