unpackaged/main/default/objects/Opportunity/validationRules/CMM_VR06_ClosedLossReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR06_ClosedLossReasonRequired</fullName>
    <active>true</active>
    <description>#SAL-1197 Closed Lost Reason is required when marking an Opportunity as Closed Lost.</description>
    <errorConditionFormula>AND(
    NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
    AND(
        ISCHANGED(StageName),
        ISPICKVAL(StageName, &#39;Closed Lost&#39;),
        ISBLANK(TEXT(Loss_Reason__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Closed Lost Reason is required when marking an Opportunity as Closed Lost</errorMessage>
</ValidationRule>