unpackaged/main/default/objects/Opportunity/validationRules/CMM_VR09_ContractStartDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR09_ContractStartDateRequired</fullName>
    <active>true</active>
    <description>#SAL-1197 Contract Start Date is required before moving to the Discovery stage.</description>
    <errorConditionFormula>AND(
    NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
    AND(
        ISCHANGED(StageName),
        ISPICKVAL(StageName, &#39;Discovery&#39;),
        ISBLANK(ContractStartDate__c)
    )
)</errorConditionFormula>
    <errorDisplayField>ContractStartDate__c</errorDisplayField>
    <errorMessage>Contract Start Date is required before moving to the Discovery stage.</errorMessage>
</ValidationRule>