unpackaged/main/default/objects/Opportunity/validationRules/CMM_VR12_AccountDrugRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR12_AccountDrugRequired</fullName>
    <active>true</active>
    <description>#SAL-1197 Ensure to have associated a drug to the relevant services..</description>
    <errorConditionFormula>AND(
    NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
    AND(
        ISCHANGED( StageName )
    )
)</errorConditionFormula>
    <errorMessage>Please ensure you have associated a drug to the relevant services</errorMessage>
</ValidationRule>