unpackaged/main/default/objects/Opportunity/listViews/Proposal_Support_Opportunities.listView-meta.xml
<ListView>
    <fullName>Proposal_Support_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ProposalTeamSupport__c</columns>
    <columns>ProposalStatus__c</columns>
    <columns>ProposalAnalyst__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ProposalTeamSupport__c</field>
        <operation>equals</operation>
        <value>RFP,RFI,Proactive Proposal</value>
    </filters>
    <label>Proposal Support Opportunities</label>
</ListView>